convolution (doesnt work) and linear dynamic extension added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="hue_string">Hue</string>
     <string name="Back">Back</string>
     <string name="convolution_string">Convolution</string>
+    <string name="dynamicLinear_string">Dynamic Linear Ext</string>
+    <string name="reset_string">Reset</string>
+    <string name="histequalizer_string">Histogram Equalizer</string>
 </resources>
